# actix3

./: .gitignore  Cargo.toml  README.md  config.toml
benches/: readme.md
common/: Cargo.toml
common/src/: cli.rs  config.rs  lib.rs  log.rs  msg.rs  myclap.rs
common/src/cli/: mod.rs  mymongo.rs  myredis.rs
handler/: Cargo.toml
handler/src/: article.rs  lib.rs  student.rs
model/: Cargo.toml
model/src/: article.rs  lib.rs  mongo.rs
src/: main.rs
