[package]
name = "common"
version = "0.1.0"
authors = ["gaoxiankang <gaoxiankang@xiaoduotech.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
failure = "0.1.5"
actix-web = "3.0.0-beta.3"
lazy_static = "1.4.0"
env_logger = "0.7.1"
chrono = "0.4.15"