[package]
name = "common"
version = "0.1.0"
authors = ["gaoxiankang <gaoxiankang@xiaoduotech.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
## 日志
log = "0.4.0"
env_logger = "0.7.1"
## 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0.32"
## error
failure = "0.1.5"
## web
actix-web = "3.0.0-beta.3"
## 全局变量
lazy_static = "1.4.0"
## date and time
chrono = "0.4.15"
## toml
toml = "0.5.0"

## redis
[dependencies.redis]
version = "0.17.0"

## mongo
[dependencies.mongodb]
version = "1.1.0"
default-features = false
features = ["sync"]