[package]
name = "handler"
version = "0.1.0"
authors = ["gaoxiankang <gaoxiankang@xiaoduotech.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.0.0-beta.3"
actix-http = "2.0.0-beta.3"
model = { path = "../model" }