[package]
name = "model"
version = "0.1.0"
authors = ["gaoxiankang <gaoxiankang@xiaoduotech.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = "1.1.0"
lazy_static = "1.4.0"

# [dependencies.mongodb]
# version = "1.1.0"
# default-features = false
# features = ["sync"]